selfhost/test/typechecker/typeidentifier/error_typeargs_too_few.out
Error at %FILE_NAME%:1:8
Incorrect number of type arguments
  |  var _: Map<Int>
            ^
Expected 2, but 1 was passed
